--- a/_sass/_bio.scss
+++ b/_sass/_bio.scss
@@ -8,13 +8,28 @@
 }
 
 .bio__image {
-  border: 5px solid $text-color;
+  border: $image-border;
   float: left;
   margin-right: 25px;
 }
 
 .bio__links {
   float: left;
+  ul {
+    -webkit-columns: 100px 2;
+    -moz-columns: 100px 2;
+    columns: 100px 2;
+    -webkit-column-gap: 125px;
+    -moz-column-gap: 125px;
+    column-gap: 125px;
+    li a {
+      color: $text-color;
+      border: 0px;
+      &:hover {
+        color: $link-color;
+      }
+    }
+  }
 }
 
 .latest-posts-title {
